--- a/2.md
+++ b/2.md
@@ -1,38 +1,4 @@
-# Домашнее задание к занятию 2 «Кластеризация и балансировка нагрузки»
-
-### Цель задания
-В результате выполнения этого задания вы научитесь:
-1. Настраивать балансировку с помощью HAProxy
-2. Настраивать связку HAProxy + Nginx
-
-------
-
-### Чеклист готовности к домашнему заданию
-
-1. Установлена операционная система Ubuntu на виртуальную машину и имеется доступ к терминалу
-2. Просмотрены конфигурационные файлы, рассматриваемые на лекции, которые находятся по [ссылке](2/)
-
-
-------
-
-
-### Инструкция по выполнению домашнего задания
-
-1. Сделайте fork [репозитория c шаблоном решения](https://github.com/netology-code/sys-pattern-homework) к себе в Github и переименуйте его по названию или номеру занятия, например, https://github.com/имя-вашего-репозитория/gitlab-hw или https://github.com/имя-вашего-репозитория/8-03-hw).
-2. Выполните клонирование этого репозитория к себе на ПК с помощью команды git clone.
-3. Выполните домашнее задание и заполните у себя локально этот файл README.md:
-   - впишите вверху название занятия и ваши фамилию и имя;
-   - в каждом задании добавьте решение в требуемом виде: текст/код/скриншоты/ссылка;
-   - для корректного добавления скриншотов воспользуйтесь инструкцией [«Как вставить скриншот в шаблон с решением»](https://github.com/netology-code/sys-pattern-homework/blob/main/screen-instruction.md);
-   - при оформлении используйте возможности языка разметки md. Коротко об этом можно посмотреть в [инструкции по MarkDown](https://github.com/netology-code/sys-pattern-homework/blob/main/md-instruction.md).
-4. После завершения работы над домашним заданием сделайте коммит (git commit -m "comment") и отправьте его на Github (git push origin).
-5. Для проверки домашнего задания преподавателем в личном кабинете прикрепите и отправьте ссылку на решение в виде md-файла в вашем Github.
-6. Любые вопросы задавайте в чате учебной группы и/или в разделе «Вопросы по заданию» в личном кабинете.
-
-
-
-------
-
+# Домашнее задание к занятию 2 «Кластеризация и балансировка нагрузки» - RomanG
 
 
 ### Задание 1
@@ -41,6 +7,15 @@
 - Настройте балансировку Round-robin на 4 уровне.
 - На проверку направьте конфигурационный файл haproxy, скриншоты, где видно перенаправление запросов на разные серверы при обращении к HAProxy.
 
+#### Ответ
+
+![2task1.1](https://github.com/RomanVol1/fault-tolerance/blob/main/2task1.1.jpg)
+
+![2task1.2](https://github.com/RomanVol1/fault-tolerance/blob/main/2task1.2.jpg)
+
+![2task1.3](https://github.com/RomanVol1/fault-tolerance/blob/main/2task1.3.jpg)
+
+[haproxy](https://github.com/RomanVol1/fault-tolerance/blob/main/2(task1)haproxy.cfg)
 
 ### Задание 2
 - Запустите три simple python сервера на своей виртуальной машине на разных портах
@@ -48,7 +23,15 @@
 - HAproxy должен балансировать только тот http-трафик, который адресован домену example.local
 - На проверку направьте конфигурационный файл haproxy, скриншоты, где видно перенаправление запросов на разные серверы при обращении к HAProxy c использованием домена example.local и без него.
 
+#### Ответ
 
+![2task2.1](https://github.com/RomanVol1/fault-tolerance/blob/main/2task2.1.jpg)
+
+![2task2.2](https://github.com/RomanVol1/fault-tolerance/blob/main/2task2.2.jpg)
+
+![2task2.3](https://github.com/RomanVol1/fault-tolerance/blob/main/2task2.3.jpg)
+
+[haproxy](https://github.com/RomanVol1/fault-tolerance/blob/main/2(task2)haproxy.cfg)
 
 ---
 
@@ -62,28 +45,10 @@
 - Настройте Nginx так, чтобы файлы .jpg выдавались самим Nginx (предварительно разместите несколько тестовых картинок в директории /var/www/), а остальные запросы переадресовывались на HAProxy, который в свою очередь переадресовывал их на два Simple Python server.
 - На проверку направьте конфигурационные файлы nginx, HAProxy, скриншоты с запросами jpg картинок и других файлов на Simple Python Server, демонстрирующие корректную настройку.
 
----
+#### Ответ
 
-### Задание 4*
-- Запустите 4 simple python сервера на разных портах.
-- Первые два сервера будут выдавать страницу index.html вашего сайта example1.local (в файле index.html напишите example1.local)
-- Вторые два сервера будут выдавать страницу index.html вашего сайта example2.local (в файле index.html напишите example2.local)
-- Настройте два бэкенда HAProxy
-- Настройте фронтенд HAProxy так, чтобы в зависимости от запрашиваемого сайта example1.local или example2.local запросы перенаправлялись на разные бэкенды HAProxy
-- На проверку направьте конфигурационный файл HAProxy, скриншоты, демонстрирующие запросы к разным фронтендам и ответам от разных бэкендов.
+![2task3](https://github.com/RomanVol1/fault-tolerance/blob/main/2task3.1.jpg)
 
+[haproxy](https://github.com/RomanVol1/fault-tolerance/blob/main/2(task3)haproxy.cfg)
+[nginx](https://github.com/RomanVol1/fault-tolerance/blob/main/2(task3)example-http.conf)
 
-------
-
-### Правила приема работы
-
-1. Необходимо следовать инструкции по выполнению домашнего задания, используя для оформления репозиторий Github
-2. В ответе необходимо прикладывать требуемые материалы - скриншоты, конфигурационные файлы, скрипты. Необходимые материалы для получения зачета указаны в каждом задании.
-
-
-------
-
-### Критерии оценки
-
-- Зачет - выполнены все задания, ответы даны в развернутой форме, приложены требуемые скриншоты, конфигурационные файлы, скрипты. В выполненных заданиях нет противоречий и нарушения логики
-- На доработку - задание выполнено частично или не выполнено, в логике выполнения заданий есть противоречия, существенные недостатки, приложены не все требуемые материалы.
